# llm-walkie-talkie

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  discovery.py  evolve.py  export.py  extension_guidelines.txt  implementation_audit.md  indexer.py  install.py  pyproject.toml  reconstructed_all_edits.json  reconstructed_edits.json  requirements.txt  theme.contract.yaml  token_lint.py  verify_dashboard.js  verify_ui.py  walkie.py  walkie_details.txt
.agents/: AGENTS.md
.agents/skills/ai_consult/: SKILL.md
.agents/skills/llm_loop/: SKILL.md
.agents/skills/lwt_goal/: SKILL.md
.walkie/: symbols_index.json
antigravity-plugin/: LICENSE  README.md  extension.js  llm-walkie-talkie-1.0.0.vsix  llm-walkie-talkie-1.0.1.vsix  llm-walkie-talkie-1.0.10.vsix  llm-walkie-talkie-1.0.2.vsix  llm-walkie-talkie-1.0.3.vsix  llm-walkie-talkie-1.0.4.vsix  llm-walkie-talkie-1.0.5.vsix  llm-walkie-talkie-1.0.6.vsix  llm-walkie-talkie-1.0.7.vsix  llm-walkie-talkie-1.0.8.vsix  llm-walkie-talkie-1.0.9.vsix  package.json  plugin.json
antigravity-plugin/lwt-preferences-ui/: app.js  index.html  style.css
antigravity-plugin/skills/ai_consult/: SKILL.md
antigravity-plugin/skills/llm_loop/: SKILL.md
export_for_review/: codebase_part_1.txt
lwt-preferences-ui/: app.js  index.html  style.css
tests/: test_discovery.py  test_evolve.py  test_loop.py  test_patching.py  test_session.py
walkie_talkie_package/: .env.example  .gitignore  README.md  install.py  requirements.txt  walkie.py
(+1 files in other folders)
