[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-walkie-talkie"
version = "1.0.0"
description = "LLM Walkie-Talkie: Consult external LLMs from your terminal/IDE"
readme = "README.md"
authors = [
    {name = "drfox2025"}
]
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.40.0",
    "colorama>=0.4.6"
]

[project.scripts]
walkie = "walkie:cli"

[tool.setuptools]
py-modules = ["walkie", "indexer"]
